--- a/package.json
+++ b/package.json
@@ -10,25 +10,38 @@
     "export": "next export"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
     "@react-email/components": "^0.0.7",
     "@react-email/tailwind": "^0.0.8",
     "@types/node": "20.4.5",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cva": "^0.0.0",
     "eslint": "8.46.0",
-    "eslint-config-next": "13.4.12",
-    "framer-motion": "^10.15.0",
-    "next": "13.4.12",
+    "eslint-config-next": "16.1.1",
+    "framer-motion": "^10.18.0",
+    "gsap": "^3.14.2",
+    "lucide-react": "^0.562.0",
+    "next": "16.1.1",
+    "next-intl": "^4.7.0",
+    "next-themes": "^0.4.6",
     "postcss": "8.4.27",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
-    "react-vertical-timeline-component": "^3.6.0",
     "resend": "^0.16.0",
     "sharp": "^0.32.4",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.1.6"
   },
   "devDependencies": {
