--- a/package.json
+++ b/package.json
@@ -46,5 +46,9 @@
   },
   "devDependencies": {
     "@types/react-vertical-timeline-component": "^3.3.3"
+  },
+  "engines": {
+    "node": "24.x",
+    "pnpm": "9.4.0 || >=9.7.0"
   }
 }
