--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-config-next": "16.1.1",
     "framer-motion": "^10.18.0",
     "gsap": "^3.14.2",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "next-intl": "^4.7.0",
