--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "@types/react-vertical-timeline-component": "^3.3.3"
   },
   "engines": {
-    "node": "24.x",
-    "pnpm": "9.4.0 || >=9.7.0"
-  }
+    "node": ">=20.0.0",
+    "pnpm": ">=9.0.0"
+  },
+  "packageManager": "pnpm@10.2.0"
 }
